--- a/admin_home.html
+++ b/admin_home.html
@@ -65,10 +65,10 @@
 
 <fieldset style="background-color:rgb(240, 169, 17);"> <h2><center><strong>CANTEEN MANAGEMENT SYSTEM</strong></center></h2></fieldset>
    <ul>
-    <li><a href="http://localhost/canteen/admin_home.html">HOME</a></li>
-    <li><a href="http://localhost/canteen/menu.html">MENU </a></li>
-    <li><a href=" http://localhost/canteen/menuform.html">MENU UPDATION</a></li>
-    <li><a href="http://localhost/canteen/retrieve.php">ADMINISTRATION</a></li>
+    <li><a href="admin_home.html">HOME</a></li>
+    <li><a href="menu.html">MENU </a></li>
+    <li><a href="menuform.html">MENU UPDATION</a></li>
+    <li><a href="retrieve.php">ADMINISTRATION</a></li>
     <li><a href="...">CONTACT US</a></li>
     <li><a href="logout.php">LOGOUT</a></li><br>
     <br>
